# QR-Attendance-Checker---Flask-Version

./: .dockerignore  .env.example  .gitignore  Dockerfile  README-AZURE.md  README.md  mascan_attendance.db  requirements.txt  sample_students.csv  startup.sh  wsgi.py
.github/workflows/: main_mascan-qr.yml
app/: app.py  pyproject.toml  requirements.txt  wsgi.py
app/src/: __init__.py  flask_app.py  reportlab_mods.py
app/src/config/: __init__.py  constants.py
app/src/database/: __init__.py  db_manager.py
app/src/routes/: __init__.py  api_routes.py  attendance_routes.py  auth_routes.py  dashboard_routes.py  event_routes.py  qr_management_routes.py  user_routes.py
app/src/static/css/: style.css
app/src/static/js/: main.js  modal.js  scanner.js
app/src/templates/: activity_log.html  attendance_history.html  base.html  dashboard.html  dashboard_mobile.html  login.html  scanner.html  scanner_mobile.html
app/src/templates/errors/: 404.html  500.html
app/src/templates/events/: create.html  edit.html  list.html  view.html
app/src/templates/qr/: manage.html
app/src/templates/users/: create.html  edit.html  list.html
app/src/utils/: __init__.py  pdf_export.py  qr_scanner.py
